--- a/.gitconfig
+++ b/.gitconfig
@@ -36,10 +36,10 @@
 [core]
 	excludesfile = ~/.gitignore_global
 [difftool "sourcetree"]
-	cmd = /usr/local/bin/ksdiff -- \"$LOCAL\" \"$REMOTE\"
+	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
 	path =
 [mergetool "sourcetree"]
-	cmd = /usr/local/bin/kdiff3 --merge \"$BASE\" \"$LOCAL\" \"$REMOTE\"
+	cmd = /usr/local/bin/ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
 	trustExitCode = true
 [difftool "Kaleidoscope"]
 	cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
