Tweak git config

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -15,10 +15,12 @@
 	aa = add -A
 	wc = whatchanged
 	ks = difftool -t Kaleidoscope
-	dt = difftool
+	dt = difftool -t sourcetree
 	mt = mergetool
 	cp = cherry-pick
 	can = !git commit --amend --date=\"$(date '+%Y-%m-%d %H:%M:%S')\"
+	psuh = push
+	git = !git
 
 	l  = log --graph --decorate --oneline
 	la = log --graph --decorate --oneline --all
@@ -34,12 +36,14 @@
 	rbs = rebase --skip
 	rbh = rebase HEAD@{1}
 [core]
-	excludesfile = ~/.gitignore_global
+	excludesfile = /Users/spaquet/.gitignore_global
+	pager = diff-so-fancy | less --tabs=4 -RFX
+	hooksPath = $GIT_DIR/hooks-srgpqt
 [difftool "sourcetree"]
 	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
 	path =
 [mergetool "sourcetree"]
-	cmd = /usr/local/bin/ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
+	cmd = /Applications/kdiff3.app/Contents/MacOS/kdiff3 \"$BASE\" \"$LOCAL\" \"$REMOTE\" -o \"$MERGED\"
 	trustExitCode = true
 [difftool "Kaleidoscope"]
 	cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
@@ -56,3 +60,10 @@
 	tool = kdiff3
 [push]
 	default = simple
+[credential]
+	helper = osxkeychain
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	required = true
+	process = git-lfs filter-process
